# DataEngineer_k19_projects

./: LICENSE  README.md
P1-linux-cmd/: README.md  actor_with_most_movies.csv  director_with_most_movies.csv  genre_stats.csv  movies_analysis.sh  movies_rating_gt_7_5.csv  revenue_and_rating_by_year.csv  revenue_highest_and_lowest.csv  revenue_total.csv  top10_profit.csv
gcp-data-collection/: .gitignore  README.md  pyproject.toml
gcp-data-collection/config/: env_variable.sh  settings.py
gcp-data-collection/output/: schema_fields.txt  schema_profile.csv
gcp-data-collection/scripts/: 10_product_name_crawler.py  1_validate_settings.py  2_upload_glamira.py  3_create_vm.py  4_install_mongo.sh  5_mongodb_restore.sh  6_data_dict.py  6_schema_profiler.py  7_process_ip_location.py  8_build_product_urls.sh  9_export_product_urls.py  data_dict.py  upload_glamira.py
gcp-data-collection/src/gcp_data_collection/: gcs.py  ip_location.py  schema_profiler_helpers.py  vm.py
project-1-bash-unix/: README.md
